[package]
name = "postgres-types-extra"
authors = ["Rohit Singh <razein@wizql.com>"]
version = "0.1.0"
edition = "2024"
description = "Conversions for rust and postgres types"
keywords = ["types", "postgres", "tokio-postgres"]
license-file = "LICENSE"
homepage = "https://github.com/razein97/postgres-types-extra"
readme = "README.md"
repository = "https://github.com/razein97/postgres-types-extra"

[dependencies]
bigdecimal = "0.4.8"
bitflags = "2.9.4"
byteorder = "1.5.0"
bytes = "1.10.1"
chrono = "0.4.42"
cidr = "0.3.1"
macaddr = "1.0.1"
postgis = "0.9.0"
postgres-protocol = "0.6.9"
postgres-types = "0.2.10"
postgres_range = "0.11.1"
