[package]
name = "postgres-types-extra"
authors = ["Rohit Singh <razein@wizql.com>"]
version = "0.1.0"
edition = "2024"
description = "Conversions for rust and postgres types"
keywords = ["types", "postgres", "tokio-postgres"]
license-file = "LICENSE"
homepage = "https://github.com/razein97/postgres-types-extra"
readme = "README.md"
repository = "https://github.com/razein97/postgres-types-extra"

[dependencies]
bigdecimal = "0.4"
bitflags = "2.9"
byteorder = "1.5"
bytes = "1.10"
chrono = "0.4"
cidr = "0.3"
macaddr = "1.0"
postgis = "0.9"
postgres-protocol = "0.6"
postgres-types = "0.2"
rust_decimal = "1.38"
postgres_range = { git = "https://github.com/razein97/rust-postgres-range.git", features = [
    "with-chrono-0_4",
    "with-decimal-1",
] }
